--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/103137721" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- Конец кода Яндекс Метрики -->
+
+  <!-- Настройки (необязательно) -->
+<script>
+  window.COOKIE_CONSENT_CONFIG = {
+    policyUrl: './privacy.html',   // ссылка на вашу политику/соглашение
+    position: 'bottom',            // 'top' | 'bottom'
+    theme: 'light',                // 'light' | 'dark'
+    texts: {
+      message: 'Мы используем cookie для аналитики и улучшения сервиса.',
+      more: 'Подробнее',
+      accept: 'Согласиться',
+      decline: 'Отказаться'
+    }
+  };
+</script>
+
+<!-- Подключение скрипта (укажите корректный путь) -->
+<script src="./consent.js" defer></script>
+
+
+  
 </head>
 <body>
   <h1>Добро пожаловать на тестовый сайт!</h1>
