--- a/index.html
+++ b/index.html
@@ -3,23 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Тестовый сайт</title>
-  <!-- Код Яндекс Метрики (вставьте ваш код счетчика сюда) -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();
-   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(103137721, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/103137721" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-  <!-- Конец кода Яндекс Метрики -->
 
   <!-- Настройки (необязательно) -->
 <script>
@@ -44,15 +27,14 @@
 </head>
 <body>
   <h1>Добро пожаловать на тестовый сайт!</h1>
-  <button onclick="ym(103137721, 'reachGoal', 'click_button')">Отправить заявку</button>
+  <button type="button">Отправить заявку</button>
   <form onsubmit="sendFormGoal(); return false;">
     <input type="text" name="name" placeholder="Ваше имя" required>
     <input type="submit" value="Отправить">
   </form>
-  <button onclick="ym(103137721, 'reachGoal', 'click_final')">Final button</button>
+  <button type="button">Final button</button>
   <script>
     function sendFormGoal() {
-      ym(103137721, 'reachGoal', 'form_submit');
       alert('Форма отправлена!');
     }
   </script>
